ingress/02-ingress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: pod-service
spec:
  selector:
    app: nginx
  ports:
    - port: 80           # Port exposed by the service
      targetPort: 80     # Port your container listens on
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test,Project=Roboshop
    alb.ingress.kubernetes.io/group.name: roboshop
spec:
  ingressClassName: alb
  rules:
  - host: "pod.hiteshshop.store"
    http:
      paths:
      - pathType: Prefix
        path: "/index.html"
        backend:
          service:
            name: pod-service
            port:
              number: 80
