ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test,Project=Roboshop
    alb.ingress.kubernetes.io/group.name: roboshop
spec:
  ingressClassName: alb
  rules:
  - host: "hiteshshop.store"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port:
              number: 80

# annotations:
#   kubernetes.io/ingress.class: "alb"
#   alb.ingress.kubernetes.io/scheme: "internet-facing"
#   alb.ingress.kubernetes.io/target-type: "ip"
#   alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
#   alb.ingress.kubernetes.io/certificate-arn: "your-certificate-arn"
#   alb.ingress.kubernetes.io/healthcheck-path: "/"
#   alb.ingress.kubernetes.io/success-codes: "200,404"
